--- a/codes/web-each/static/mystyle.css
+++ b/codes/web-each/static/mystyle.css
@@ -51,7 +51,7 @@ body {
     text-align: center;
     border: 3px solid forestgreen;
     width: 50%;
-    height: auto;
+    height: 50%;
     font-size: 3vh;
     margin: auto;
 }
