--- a/codes/web-each/airQualityApp/templates/mission.html
+++ b/codes/web-each/airQualityApp/templates/mission.html
@@ -9,7 +9,7 @@
         {% block content %}
         <h1 style="text-align: center;">Our Mission</h1>
         <div class="center">
-            <p>Our goal is to be exceptional stuards of our land in order to enact substantial change in our community and beyond. Through acts of service, collaboration with city officials, and increased attention towards pressing environmental issues, we strive to do our part in reversing the significant damage our species has inflicted upon the environment.</p>
+            <p>We are the Environmental Awareness Club of Hudson High School. Our goal is to enact positive environmental change in our community by working with community leaders, educating our peers, and volunteering in order to clean up our city and promote sustainability.</p>
         </div>
         {% endblock %}
     </body>
